Fix height to remove scrollbar

--- a/muhammet/css/muhammet.scss
+++ b/muhammet/css/muhammet.scss
@@ -1,7 +1,7 @@
 @import "../../css/style";
 
 body {
-  max-height: 100vh;
+  max-height: 95vh;
 }
 
 .sectionDescr {
